# MicroservicePokemon

./: .env  .env.example  BUILD.bazel  WORKSPACE.bazel  bazel-MicroservicePokemon  bazel-PokemonMicroservice  bazel-bin  bazel-out  bazel-testlogs  schema.sql
src/main/: Application.java  BUILD.bazel  Main.java
src/main/api/: BUILD.bazel  PokemonApiClient.java  PokemonApiClientInterface.java
src/main/handler/: BUILD.bazel  PokemonHandler.java  PokemonHandlerInterface.java  PokemonRestVerticle.java
src/main/model/: BUILD.bazel  Pokemon.java
src/main/repository/: BUILD.bazel  PokemonRepository.java  PokemonRepositoryInterface.java  PostgresClientProvider.java
src/main/resources/: tableType.json
src/main/service/: BUILD.bazel  PokemonService.java  PokemonServiceInterface.java
src/test/: BUILD.bazel  PokeTest.java
