java_binary(
    name = "app",
    srcs = ["Application.java"],
    resources = ["resources/tableType.json"],
    resource_strip_prefix = "src/main",
    main_class = "main.Application",
    deps = [
        "@maven//:io_vertx_vertx_core_4_5_15",
        "@maven//:io_vertx_vertx_web_4_5_15",
        "@maven//:io_vertx_vertx_web_client_4_5_15",

        "//src/main/model:pokemodel",
        "//src/main/api:pokeapi",
        "//src/main/service:pokeservice",
    ],
    )
