java_library(
   name = "pokerepository",
   srcs = ["PokemonRepository.java",
           "PokemonRepositoryInterface.java",
            "PostgresClientProvider.java"],
   visibility = ["//src:__subpackages__"],
   deps = [
        "//src/main/model:pokemodel",
        "@maven//:io_vertx_vertx_core_4_5_15",
        "@maven//:io_vertx_vertx_pg_client_4_5_15",
        "@maven//:io_vertx_vertx_sql_client_4_5_15",
        "@maven//:com_ongres_scram_client_2_1",
        "@maven//:io_github_cdimascio_dotenv_java_3_2_0",




    ],
)